--- a/submodules/sasc/sasc-tests.ipynb
+++ b/submodules/sasc/sasc-tests.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1. 1.]\n",
-      " [1. 0.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#this matrix will produce a linear tree with structure (R -> m1 -> m2)\n",
     "mutations_matrix = [[1, 1], \n",
@@ -75,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: {'label': \"b'germline'\", 'loss': 0, 'mutation_index': -1}\n",
-      "1: {'label': \"b'm1'\", 'loss': 0, 'mutation_index': 0}\n",
-      "2: {'label': \"b'm2'\", 'loss': 0, 'mutation_index': 1}\n"
+      "0: {'label': 'germline', 'loss': 0, 'mutation_index': -1}\n",
+      "1: {'label': 'm1', 'loss': 0, 'mutation_index': 0}\n",
+      "2: {'label': 'm2', 'loss': 0, 'mutation_index': 1}\n"
      ]
     }
    ],
