updated nomination in files

--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -18,7 +18,7 @@
     }
    ],
    "source": [
-    "from phylo import celluloid, sasc, mp3\n",
+    "from plastic import clustering, phylogeny, treesim\n",
     "import glob\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
@@ -55,7 +55,7 @@
     "patients_names = list()\n",
     "for f in glob.glob('medullo/called/*.txt'):\n",
     "    patients_names.append(f.split('/')[-1].replace('.txt', ''))\n",
-    "    p = celluloid.GenotypeMatrix(np.loadtxt(f, delimiter=' '),\n",
+    "    p = clustering.GenotypeMatrix(np.loadtxt(f, delimiter=' '),\n",
     "                                 cell_labels=list(map(str.strip, open(f'{f}.cells').readlines())),\n",
     "                                 mutation_labels=list(map(str.strip, open(f'{f}.muts').readlines()))\n",
     "                                )\n",
@@ -80,11 +80,11 @@
     "clustered_patients = list()\n",
     "for ix, p in enumerate(patients):\n",
     "    try:\n",
-    "        c = celluloid.GenotypeMatrix.from_serializable_dict(\n",
+    "        c = clustering.GenotypeMatrix.from_serializable_dict(\n",
     "            pickle.load(open(f'medullo/clustered/{patients_names[ix]}.p', 'rb'))\n",
     "        )\n",
     "    except:\n",
-    "        c = celluloid.cluster_mutations(p, k=50, n_inits=5, max_iter=50, verbose=True)\n",
+    "        c = clustering.cluster_mutations(p, k=50, n_inits=5, max_iter=50, verbose=True)\n",
     "        pickle.dump(c.to_serializable_dict(), open(f'medullo/clustered/{patients_names[ix]}.p', 'wb'))\n",
     "    clustered_patients.append(c)"
    ]
